--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
 
 :root {
   --basic-black: #000000;
+  --basic-black-rgba: rgba(0,0,0,0.3);
   --basic-extra-dark: #333333;
   --basic-dark: #666666;
   --basic-neutral: #A9A9A9;
@@ -30,6 +31,7 @@
   --basic-extra-light: #CACACA;
   --basic-light: #BDBBBC;
   --basic-white: #ffffff;
+  --basic-white-rgba: rgba(255,255,255,0.3);
 
   --basic-bg: #F2F2F2;
   --basic-bg-hover: #EBEBEB;
@@ -120,6 +122,10 @@ img {
 .site-navigation a:focus {
   color: var(--basic-black);
   opacity: 0.3;
+}
+
+.site-navigation .active a {
+  color: var(--special);
 }
 
 /* Features */
@@ -230,6 +236,240 @@ img {
   background-color: var(--special-active);
 }
 
+/* Filter */
+
+.hotels-filter {
+  padding-top: 27px;
+  padding-bottom: 31px;
+  color: var(--basic-white);
+  background-color: var(--basic-extra-dark);
+  background: url("../img/catalog-header-bg.jpg") no-repeat center center;
+  background-size: cover;
+}
+
+.hotels-filter .inner,
+.results .inner {
+  width: 1054px;
+  margin: 0 auto;
+}
+
+.results-item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-top: 1px solid var(--basic-bg-active);
+}
+
+.results-item:last-child {
+  padding-bottom: 0;
+}
+
+.fields-group {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  border: none;
+}
+
+.fields-group .title {
+  font-size: 16px;
+  margin-bottom: 25px;
+}
+
+.checkbox-outer {
+  margin: 0;
+  margin-bottom: 22px;
+  padding: 0;
+}
+
+.checkbox-outer:last-child {
+  margin-bottom: 0;
+}
+
+.checkbox-name {
+  font-weight: 400;
+}
+
+.price-controls {
+  display: inline-block;
+  border: 2px solid var(--basic-white);
+  border-radius: 2px;
+}
+
+.price-controls label,
+.price-controls input {
+  width: 60px;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 400;
+  background-color: transparent;
+  color: var(--basic-white);
+  text-align: left;
+  border: none;
+  outline: none;
+}
+
+.button-show {
+  margin: 0;
+  margin-top: 23px;
+  padding: 0;
+  padding: 7px 35px 8px 36px;
+  color: var(--basic-white);
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  border: 2px solid var(--basic-white);
+  border-radius: 2px;
+  outline: none;
+  cursor: pointer;
+}
+
+.button-show:hover {
+  background-color: var(--basic-white);
+  color: var(--basic-black);
+}
+
+/* Results */
+
+.results {
+  padding-top: 29px;
+  padding-bottom: 31px;
+  background-color: var(--basic-white);
+}
+
+.big {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+}
+
+.sort {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.sort .title,
+.sort-item-link {
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+  color: var(--basic-black);
+}
+
+.sort-item-link {
+  margin: 0;
+  padding: 0;
+  color: var(--basic-black-rgba);
+  border-bottom: 1px dotted var(--accent);
+}
+
+.sort-item-link:hover {
+  color: var(--accent);
+}
+
+.sort-item-link:active {
+  color: var(--basic-black);
+  border: none;
+}
+
+.sort-item-link.active {
+  color: var(--accent);
+  border: none;
+}
+
+.results-hotels {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.icon-up:hover path,
+.icon-down:hover path {
+  fill: var(--basic-black);
+}
+
+.icon-up:active path,
+.icon-down:active path,
+.icon-up.active path,
+.icon-down.active path {
+  fill: var(--accent);
+}
+
+.results-hotels .heading {
+  margin: 0;
+  padding: 0;
+}
+
+.heading-link {
+  font-size: 21px;
+  line-height: 26px;
+  color: var(--basic-black);
+}
+
+.heading-link:hover {
+  color: var(--accent);
+}
+
+.heading-link:active {
+  color: var(--basic-black-rgba);
+}
+
+.price-info,
+.buttons-group {
+  margin: 0;
+  font-weight: 400;
+}
+
+.more-details,
+.reservation {
+  margin: 0;
+  padding: 0;
+  font-size: 14px;
+  line-height: 21px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--basic-white);
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.more-details {
+  padding: 3px 16px 3px 17px;
+  background-color: var(--accent);
+}
+
+.more-details:hover {
+  background-color: var(--accent-hover);
+}
+
+.more-details:active {
+  color: var(--basic-white-rgba);
+  background-color: var(--accent-active);
+}
+
+.reservation {
+  padding: 3px 17px 3px 16px;
+  background-color: var(--special);
+}
+
+.reservation:hover {
+  background-color: var(--special-hover);
+}
+
+.reservation:active {
+  color: var(--basic-white-rgba);
+  background-color: var(--special-hover);
+}
+
+.rating {
+  padding: 3px 12px 3px 15px;
+  font-weight: 400;
+  color: var(--basic-dark);
+  background-color: var(--basic-bg);
+}
+
 /* Footer */
 
 .main-footer {
@@ -262,4 +502,12 @@ img {
   line-height: 26px;
   color: var(--basic-black);
   font-weight: 400;
+}
+
+.footer-copyright-link:hover path {
+  fill: var(--accent);
+}
+
+.footer-copyright-link:active path {
+  fill: var(--basic-light);
 }
