--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,14 @@
   --special-hover: #604E43;
   --special-active: #503E33;
 
+  --basic-background: #46627c;
+
 }
 
   /* Global */
+.page {
+  height: 100%;
+}
 
 body {
   width: 100%;
@@ -60,6 +65,11 @@ body {
   color: var(--basic-extra-dark);
   text-transform: uppercase;
   background-color: var(--basic-bg);
+
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: min-content 1fr min-content;
+  align-content: start;
 }
 
 a {
@@ -76,12 +86,18 @@ img {
   margin: 0 auto;
 }
 
+.shadow {
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+}
+
 .d_none {
   display: none;
 }
 
 .banner {
   position: relative;
+  padding-top: 77px;
+  padding-bottom: 81px;
   text-align: center;
   background-color: var(--basic-light);
   background: var(--basic-light) url("../img/main-header.jpg") no-repeat center center;
@@ -101,15 +117,45 @@ img {
 /* Main navigation */
 
 .main-navigation {
+  position: relative;
+  min-height: 55px;
   line-height: 26px;
   color: var(--basic-black);
   background-color: var(--basic-white);
 }
 
+.main-header-logo {
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
 .site-navigation {
-  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 0;
   padding: 0;
+  padding-left: 73px;
+  padding-right: 73px;
+  list-style: none;
+}
+
+.site-navigation-item {
+  width: 226px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.site-navigation-item:nth-child(3) {
+  margin-left: 149px;
+}
+
+.site-navigation-item:nth-child(3),
+.site-navigation-item:nth-child(4) {
+  text-align: right;
 }
 
 .site-navigation a {
@@ -131,6 +177,7 @@ img {
 /* Features */
 
 .features {
+  padding-top: 42px;
   background-color: var(--basic-white);
 }
 
@@ -142,18 +189,39 @@ img {
 }
 
 .features .description {
+  margin: 0;
+  margin-top: 20px;
+  margin-bottom: 51px;
+  padding: 0;
   line-height: 26px;
   font-weight: 400;
   text-align: center;
 }
 
 .feature {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   text-align: center;
   background-color: var(--accent);
   color: var(--basic-white);
 }
 
+.feature-reverse {
+  grid-template-columns: 2fr 1fr;
+}
+
+.feature-reverse .feature-image {
+  order: 1;
+}
+
+.feature-reverse .feature-text {
+  order: 2;
+}
+
 .feature .heading {
+  margin: 0;
+  margin-bottom: 25px;
+  padding: 0;
   font-size: 21px;  
 }
 
@@ -162,15 +230,47 @@ img {
 .features-item .text,
 .features-rest-item .number,
 .features-rest-item .text {
+  margin: 0;
+  padding: 0;
   font-weight: 400;
 }
 
-.features-list {
+.feature-text {
+  padding: 47px 48px;
+  align-self: center;
+}
+
+.feature-text .text {
+  margin-top: 23px;
+}
+
+.feature-image img {
+  display: block;
+}
+
+.features-list,
+.features-rest-list {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
+.features-list {
+  background-color: var(--basic-bg);
+}
+
 .features-item {
+  padding: 60px 58px;
+  background-color: var(--basic-white);
   text-align: center;
+}
+
+.features-item:first-child {
+  margin-left: 61px;
+  padding-left: 12px;
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
 }
 
 .features-list .heading {
@@ -182,24 +282,51 @@ img {
   background-color: var(--basic-neutral-bg);
 }
 
-.features-rest-list {
-  list-style: none;
-}
-
 .features-rest-item {
+  padding: 47px 71px;
+  align-self: center;
   text-align: center;
 }
 
 .features-rest-item .title {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 25px;
   font-size: 21px;
   color: var(--basic-black);
 }
 
+.features-rest-item .text {
+  margin-top: 23px;
+}
+
 /* Appointment */
 
-.appointment {
+.appointment {  
   text-align: center;
+}
+
+.appointment-content {
+  margin-left: 61px;
+  padding-top: 58px;
   background-color: var(--basic-white);
+  position: relative;
+}
+
+.appointment-content::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 99%;
+  background-color: inherit;
+  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+  z-index: -1;
+}
+
+.appointment-content .content-inner {
+  margin-left: -61px;  
 }
 
 .appointment .heading {
@@ -211,14 +338,25 @@ img {
 }
 
 .appointment-info {
+  margin: 0;
+  padding: 0;
+  margin-top: 25px;
   line-height: 24px;
   font-weight: 400;
+}
+
+.button-outer {
+  margin: 0;
+  padding: 0;
+  margin-top: 25px;
 }
 
 .appointment .button {
   margin: 0;
   padding: 0;
-  border: none;  
+  padding: 30px 125px;
+  border: none;
+  outline: none;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -235,6 +373,9 @@ img {
 .appointment .button:active {
   background-color: var(--special-active);
 }
+.map-img {
+  display: block;
+}
 
 /* Filter */
 
@@ -242,7 +383,7 @@ img {
   padding-top: 27px;
   padding-bottom: 31px;
   color: var(--basic-white);
-  background-color: var(--basic-extra-dark);
+  background-color: var(--basic-background);
   background: url("../img/catalog-header-bg.jpg") no-repeat center center;
   background-size: cover;
 }
@@ -472,9 +613,18 @@ img {
 
 /* Footer */
 
-.main-footer {
+.main-footer .wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 35px;
+  padding-bottom: 35px;
   background-color: var(--basic-white);
-  text-align: center;
+}
+
+.footer-contacts,
+.footer-social,
+.footer-copyright {
+  justify-self: center;
 }
 
 .footer-info {
@@ -484,24 +634,62 @@ img {
   line-height: 26px;
   text-transform: uppercase;
   color: var(--basic-black);
+  text-align: center;
 }
 
 .footer-phone {
+  display: inline-block;
+  margin-top: 10px;
   font: inherit;
   color: inherit;
   text-transform: inherit;
 }
 
 .social-list {
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
   margin: 0;
   padding: 0;
   list-style: none;
+  text-align: center;
+}
+
+.social-list .social-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 46px;
+  height: 48px;
+  background-color: var(--accent);
+}
+
+.social-list .social-button:hover {
+  background-color: var(--accent-hover);
+}
+
+.social-list .social-button:active {
+  background-color: var(--accent-active);
+}
+
+.social-list .social-button:active path {
+  opacity: 0.3;
 }
 
 .footer-copyright {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 0;
   line-height: 26px;
   color: var(--basic-black);
   font-weight: 400;
+  text-align: center;
+}
+
+.footer-copyright-link {
+  display: inline-block;
+  margin-left: 8px;
 }
 
 .footer-copyright-link:hover path {
