--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,6 @@ img {
 
 .in-label,
 .out-label {
-  width: 36%;
   line-height: 26px;
   color: var(--basic-black);  
   text-align: left;
@@ -759,8 +758,9 @@ img {
 .out-label-text,
 .older-label-numbers,
 .kids-label-numbers {
-  width: 100%;
+  flex-basis: 346px;
   height: 38px;
+  margin-left: auto;
   padding: 0 38px 0 15px;
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
@@ -770,6 +770,11 @@ img {
   background-color: var(--basic-bg);
   border: 2px solid var(--basic-bg);
   box-sizing: border-box;
+}
+
+.older-label-numbers,
+.kids-label-numbers {
+  flex-basis: 38px;
 }
 
 .in-label-text:hover,
@@ -818,7 +823,15 @@ img {
 .kids {
   display: flex;
   align-items: center;
-  width: 50%;
+}
+
+.older {
+  flex-basis: 225px;
+}
+
+.kids {
+  flex-basis: 225px;
+  margin-left: auto;
 }
 
 .older-label,
@@ -843,6 +856,9 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--basic-bg);
+  border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .older-button,
