--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@
   --special: #766357;
   --special-hover: #604E43;
   --special-active: #503E33;
+  --special-shadow: rgba(0, 1, 1, 0.2);
+  --special-neutral: rgba(255, 255, 255, 0.3);
+  --special-shadow-neutral: rgba(0, 1, 1, 0.15);
 
   --basic-background: #46627c;
 
@@ -66,7 +69,6 @@ body {
   color: var(--basic-extra-dark);
   text-transform: uppercase;
   background-color: var(--basic-bg);
-
   min-height: 100%;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
@@ -88,7 +90,7 @@ img {
 }
 
 .shadow {
-  box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+  box-shadow: 0px 5px 15px var(--special-shadow);
 }
 
 .d_none {
@@ -503,7 +505,7 @@ img {
 
 .scale {
 	height: 2px;
-	background-color: rgba(255, 255, 255, 0.3);	
+	background-color: var(--special-neutral);
 }
 
 .bar {
@@ -521,7 +523,7 @@ img {
 	background-color: #ababab;
 	border: 8px solid #ffffff;
 	border-radius: 50%;
-	box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
+	box-shadow: 0 2px 1px 0 var(--special-shadow);
 	cursor: pointer;
 }
 
@@ -730,7 +732,7 @@ img {
   transform: translateX(-50%);
   padding: 55px;
   background-color: var(--basic-white);
-  box-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
+  box-shadow: 0px 7px 15px var(--special-shadow-neutral);
 }
 
 .date-in,
