--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,6 @@ img {
   width: 568px;
   padding: 30px 125px;
   border: none;
-  outline: none;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -460,9 +459,13 @@ img {
 
 .checkbox-outer label {
   position: relative;
-  display: block;
+  display: inline-block;
   cursor: pointer;
   user-select: none;
+}
+
+.checkbox-outer .filter-checkbox:focus + label {
+  color: var(--special);
 }
 
 .filter-checkbox + label::before {
@@ -607,6 +610,10 @@ img {
   color: var(--basic-black);
 }
 
+.button-show:focus {
+  outline: 2px solid var(--basic-black);
+}
+
 /* Results */
 
 .results {
@@ -733,7 +740,6 @@ img {
   color: var(--basic-white);
   background-color: transparent;
   border: none;
-  outline: none;
   cursor: pointer;
 }
 
@@ -751,6 +757,7 @@ img {
 .more-details:active {
   color: var(--basic-white-rgba);
   background-color: var(--accent-active);
+  outline: none;
 }
 
 .reservation {
@@ -765,6 +772,7 @@ img {
 .reservation:active {
   color: var(--basic-white-rgba);
   background-color: var(--special-hover);
+  outline: none;
 }
 
 .rating {
@@ -905,7 +913,6 @@ img {
   justify-content: center;
   background-color: var(--basic-bg);
   border: none;
-  outline: none;
   cursor: pointer;
 }
 
